name:           svg-koch
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/etrepum/svg-koch#readme>
homepage:       https://github.com/etrepum/svg-koch#readme
bug-reports:    https://github.com/etrepum/svg-koch/issues
author:         Bob Ippolito
maintainer:     bob@redivi.com
copyright:      2017 Bob Ippolito
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/etrepum/svg-koch

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , palette
    , optparse-applicative
  exposed-modules:
      Lib
  other-modules:
      Paths_svg_koch
  default-language: Haskell2010

executable svg-koch-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , svg-koch
    , diagrams
    , diagrams-svg
  other-modules:
      Paths_svg_koch
  default-language: Haskell2010

test-suite svg-koch-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , svg-koch
  other-modules:
      Paths_svg_koch
  default-language: Haskell2010
